--- a/index.html
+++ b/index.html
@@ -1,68 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing-Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/> 
-</head>
-<body>
-   
-
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <a href="#" class="logo">
-            <img src="images/logo.png" alt="">
-        </a>
-        <ul class="navlist">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Membership</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+      <a href="#" class="logo">
+        <img src="images/logo.png" alt="" />
+      </a>
+      <ul class="navlist">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Membership</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
 
-        <div class="right-content">
-            <a href="#" class="nav-btn">Sign In</a>
-            <div class="bx bx-menu" id="menu-icon"></div>
-        </div>
+      <div class="right-content">
+        <a href="#" class="nav-btn">Sign In</a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+      </div>
     </header>
     <!--header end-->
 
     <section class="hero">
-         <div class="hero-text">
-            <h5>#Coffee For Every Generation</h5>
-            <h1>- Hot Brew</h1>
-            <p>Boost Your Productivity and Build Your Mood
-                with a Glass of Hot Coffee In The Morning.
-                Every Generation's Favourite 
-            </p>
-            <div class="main-hero">
-                <a href="#" class="btn">Order Now</a>
-                <a href="#" class="price">
-                    Rs.250 | <span>Regular Price</span>
-                </a>
-            </div>
-         </div>
+      <div class="hero-text">
+        <h5>#Coffee For Every Generation</h5>
+        <h1>- Hot Brew</h1>
+        <p>
+          Boost Your Productivity and Build Your Mood with a Glass of Hot Coffee
+          In The Morning. Every Generation's Favourite
+        </p>
+        <div class="main-hero">
+          <a href="#" class="btn">Order Now</a>
+          <a href="#" class="price"> Rs.250 | <span>Regular Price</span> </a>
+        </div>
+      </div>
 
-         <div class="hero-img">
-            <img src="images/hero.png" alt="">
-         </div>
+      <div class="hero-img">
+        <img src="images/hero.png" alt="" />
+      </div>
     </section>
 
     <div class="icons">
-        <a href=""><i class="ri-facebook-circle-fill"></i></a>
-        <a href=""><i class="ri-github-fill"></i></a>
-        <a href=""><i class="ri-linkedin-box-fill"></i></a>
-        <a href=""><i class="ri-instagram-fill"></i></a>
+      <a href=""><i class="ri-facebook-circle-fill"></i></a>
+      <a href=""><i class="ri-github-fill"></i></a>
+      <a href=""><i class="ri-linkedin-box-fill"></i></a>
+      <a href=""><i class="ri-instagram-fill"></i></a>
     </div>
 
     <script src="script.js
     "></script>
-</body>
+  </body>
 </html>
